# gitea_api_test

./: .env  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/docker/volumes/gitea/conf/: app.ini
gitea_api/: main.py  models.py
tests/: conftest.py  test_gitea_api.py
