[tool.poetry]
name = "gitea_api"
version = "0.1.0"
description = "Gitea pytest api"
authors = ["mbrav <mbrav@protonmail.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2"
urllib3 = "^1.26"
pytest-docker-compose = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--docker-compose=docker/docker-compose.yml"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]